Update TODO file

--- a/TODO
+++ b/TODO
@@ -1,1 +1,3 @@
 TODO: Implement signout
+TODO: Write down submitting images via email
+TODO: Create 'home' page (static pages controller + layout + code)
