--- a/TODO
+++ b/TODO
@@ -2,5 +2,6 @@ TODO: Implement signout
 TODO: Write down submitting images via email
 TODO: Switch templates to HAML
 TODO: Use bootstrap (check out Jetstrap?)
-TODO: Remove app secret from repo
-TODO: Store images in S3 (in prod?)
+TODO: Add ps version to gemfile
+TODO: Add S3 credentials + app secret to Heroku env
+TODO: Use Unicorn in production
